# Bear_rescue_FV

./: .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  bear_detection.cpp  bear_detection.hpp  color_tracker_main.cpp  cv_detect.cpp  idf_component.yml  logo_s.c
